# CVlab

devel/: env.sh  setup.bash  setup.zsh
devel/include/rvc_utils/: DataSetMessage.h  ROCCurveMessage.h
devel/include/wurzel_dense/: wurzel_denseConfig.h
devel/include/wurzel_features/: feature_detectConfig.h  feature_matcherConfig.h
devel/include/wurzel_vo/: feature_voConfig.h
devel/lib/pkgconfig/: image_geometry.pc  rvc_utils.pc  wurzel_features.pc
devel/lib/python2.7/dist-packages/cv_bridge/: __init__.py
devel/lib/python2.7/dist-packages/image_geometry/: __init__.py
devel/lib/wurzel_features/: feature_detector
devel/share/cv_bridge/cmake/: cv_bridgeConfig.cmake
devel/share/image_geometry/cmake/: image_geometryConfig.cmake
devel/share/opencv_tests/cmake/: opencv_testsConfig.cmake
devel/share/wurzel_dense/cmake/: wurzel_denseConfig.cmake
devel/share/wurzel_dense/docs/: wurzel_denseConfig.dox
devel/share/wurzel_features/docs/: feature_detectConfig.dox  feature_detectConfig.wikidoc  feature_matcherConfig.dox  feature_matcherConfig.wikidoc
devel/share/wurzel_vo/cmake/: wurzel_voConfig.cmake
devel/share/wurzel_vo/docs/: feature_voConfig.dox  feature_voConfig.wikidoc
source/devel/: .catkin  .rosinstall  setup.sh
source/devel/lib/pkgconfig/: cv_bridge.pc  opencv_tests.pc  wurzel_dense.pc  wurzel_vo.pc
source/devel/lib/rvc_utils/: roc_challenge_server
source/devel/lib/wurzel_dense/: dense_exe
source/devel/lib/wurzel_features/: feature_matcher
source/devel/lib/wurzel_vo/: feature_vo
source/robotino-ros-pkg/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino/robotino_local_move/: CMakeLists.txt
source/robotino-ros-pkg/robotino/robotino_msgs/: manifest.xml
source/robotino-ros-pkg/robotino/robotino_node/: CMakeLists.txt
source/robotino-ros-pkg/robotino/robotino_node/.svn/: all-wcprops  dir-prop-base  entries
source/robotino-ros-pkg/robotino/robotino_node/.svn/text-base/: manifest.xml.svn-base
source/robotino-ros-pkg/robotino/robotino_node/include/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino/robotino_node/launch/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino/robotino_node/src/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino/robotino_node/src/.svn/text-base/: RobotinoNode.cpp.svn-base
source/robotino-ros-pkg/robotino_grappler/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino_grappler/robotino_arm_navigation/: manifest.xml
source/robotino-ros-pkg/robotino_grappler/robotino_grappler_bringup/: mainpage.dox
source/robotino-ros-pkg/robotino_grappler/robotino_grappler_calibration/: CMakeLists.txt
source/robotino-ros-pkg/robotino_grappler/robotino_grappler_description/: mainpage.dox
source/robotino-ros-pkg/robotino_grappler/robotino_grappler_node/: mainpage.dox  manifest.xml
source/robotino-ros-pkg/robotino_kinect/.svn/: all-wcprops  entries
source/robotino-ros-pkg/robotino_kinect/robotino_kinect_registration/: CMakeLists.txt  mainpage.dox
(+179 files in other folders)
